[package]
name = "backuptool-rust"
version = "0.1.0"
authors = ["Nick Hahn <nick.hahn@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.5"
cdchunking = "1.0.1"
blake3 = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
